--- a/resources/assets/sass/partials/_homenav.scss
+++ b/resources/assets/sass/partials/_homenav.scss
@@ -6,6 +6,8 @@
   max-width: 900px;
   margin: 0 auto;
 
+
+
   & > * {
     width: 33%;
     flex-grow: 1;
@@ -20,6 +22,10 @@
     font-size: x-large;
     text-decoration: none;
     text-align: center;
+
+    @include respond-to(phone) {
+      font-size: 1em;
+    }
 
     &:hover {
       color: $primary_front;
