clean up js pipeline

--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -166,6 +166,18 @@
   &.can-control.playing:hover {
     #pause_btn {
       display: block;
+
+      @include respond-to(phone) {
+        display: none;
+      }
+
+      @include respond-to(smalltablet) {
+        display: none;
+      }
+
+      @include respond-to(largetablet) {
+        display: none;
+      }
     }
   }
 
